Fixed the website Flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
   p {-webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
 
   /* Scrollbar 20px */
-  ::-webkit-scrollbar {width: 20px;}
+  ::-webkit-scrollbar {width: 12px;}
   ::-webkit-scrollbar-track {background: #525252;}
   ::-webkit-scrollbar-thumb {background: #888; border-radius: 20px;}
   ::-webkit-scrollbar-thumb:hover {background: #838383;}
@@ -36,7 +36,7 @@
     </div>
     <div class="blur">
         <h1>Hello there!</h1>
-        <h2>This bot is using the Flask app to hosting online 24/7 on Replit.</h2>
+        <h2>This bot is using the Flask app to hosting online on Replit.</h2>
     </div>
 </body>
 </title>
